--- a/novo.html
+++ b/novo.html
@@ -1,1 +1,16 @@
-gabriel weender do prado
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shoutcut icon" href="C:\Users\Gabri\Documents\aulascoderhouse\OIP.jpg">
+    <title>gabriel wender do prado</title>
+</head>
+<body>
+    <h1>harry potter</h1>
+    <img src="C:\Users\Gabri\Documents\aulascoderhouse\R.jpg" alt="1000x800">
+    
+    <p>testando</p>
+    <div><b>descobrindo</b></div>
+</body>
+</html>
