adcionando imagem no html

--- a/novo.html
+++ b/novo.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shoutcut icon" href="C:\Users\Gabri\Documents\aulascoderhouse\OIP.jpg">
-    <title>gabriel wender do prado</title>
+    <link rel="shoutcut icon" href="C:\Users\Gabri\Documents\aulascoderhouse\harry potter.jpg">
+    <title>Harry potter</title>
 </head>
 <body>
     <h1>harry potter</h1>
-    <img src="C:\Users\Gabri\Documents\aulascoderhouse\R.jpg" alt="1000x800">
+    <img src="C:\Users\Gabri\Documents\aulascoderhouse\R.jpg" alt="">
     
     <p>testando</p>
     <div><b>descobrindo</b></div>
