adcionando imagens e escrita no body

--- a/novo.html
+++ b/novo.html
@@ -10,7 +10,7 @@
     <h1>harry potter</h1>
     <img src="C:\Users\Gabri\Documents\aulascoderhouse\R.jpg" alt="">
     
-    <p>testando</p>
-    <div><b>descobrindo</b></div>
+    <p><h2>Projeto harry potter</h2></p>
+    <div><b>gabriel wender do prado</b></div>
 </body>
 </html>
