--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shoutcut icon" href="C:\Users\Gabri\Documents\aulascoderhouse\harry potter.jpg">
+    <title>Harry potter</title>
 </head>
 <body>
-    <h1>Teste com git</h1>
-    <b>Fazendo teste com git</b>
+    <h1>harry potter</h1>
+    <img src="C:\Users\Gabri\Documents\aulascoderhouse\R.jpg" alt="">
+    
+    <p><h2>Projeto harry potter</h2></p>
+    <div><b>gabriel wender do prado</b></div>
 </body>
 </html>
