--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shoutcut icon" href="C:\Users\Gabri\Documents\aulascoderhouse\harry potter.jpg">
-    <title>Harry potter</title>
+    <link rel="shoutcut icon" href="harry_potter.jpg">
+    <title>Harry_potter</title>
 </head>
 <body>
     <h1>harry potter</h1>
-    <img src="C:\Users\Gabri\Documents\aulascoderhouse\R.jpg" alt="">
+    <img src="R.jpg" alt="">
     
     <p><h2>Projeto harry potter</h2></p>
     <div><b>gabriel wender do prado</b></div>
